[metadata]
name = bug_pylint
description = Show pylint does not walk through file in pytest folder
license = GPL
provides = one_package
url =
download_url =
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
zip_safe = False
python_requires = >=3.5
packages = find:
include_package_data = True
install_requires =
	pylint==2.3.1

[options.extras_require]
tests =
	pytest==4.4.1


[options.packages.find]
exclude = tests